# routes/index.ts
@@ -6,6 +6,7 @@ const router = Router()
 
 router
     .use('/clubs', require('./clubs'))
+    .use('/events', require('./events'))
     .use('/api-docs', swaggerUi.serve)
     .get('/api-docs', swaggerUi.setup(swaggerDocument))
 
